--- a/examples/08_3D_Model.ipynb
+++ b/examples/08_3D_Model.ipynb
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "viewer = cesiumpy.Viewer(divid=\"viewertest\")\n",
+    "viewer = cesiumpy.Viewer(id=\"viewertest\")\n",
     "viewer.scene.primitives.add(m)\n",
     "viewer"
    ]
