feat: fix tests and update some source code to reflect that

--- a/examples/11_with_pandas.ipynb
+++ b/examples/11_with_pandas.ipynb
@@ -359,7 +359,7 @@
     "for i, row in df.iterrows():\n",
     "    l = row['Recreation Visitors (2014)[5]']\n",
     "    cyl = cesiumpy.Cylinder(position=[row['lon'], row['lat'], l / 2.], length=l,\n",
-    "                            topRadius=10e4, bottomRadius=10e4, material='aqua')\n",
+    "                            top_radius=10e4, bottom_radius=10e4, material='aqua')\n",
     "    v.entities.add(cyl)\n",
     "v"
    ]
@@ -455,7 +455,7 @@
     "for i, row in df.iterrows():\n",
     "    l = row['Recreation Visitors (2014)[5]']\n",
     "    p= cesiumpy.Point(position=[row['lon'], row['lat'], 0],\n",
-    "                      pixelSize=np.sqrt(l / 10000), color='blue')\n",
+    "                      pixel_size=np.sqrt(l / 10000), color='blue')\n",
     "    v.entities.add(p)\n",
     "v"
    ]
