--- a/examples/02_viewer_and_objects.ipynb
+++ b/examples/02_viewer_and_objects.ipynb
@@ -95,10 +95,10 @@
     "box = cesiumpy.Box(position=[-110, 40, 0], dimensions=(40e4, 30e4, 50e4), material=cesiumpy.color.RED)\n",
     "v.entities.add(box)\n",
     "\n",
-    "ellipse = cesiumpy.Ellipse( position=[-100, 40, 0], semiMinorAxis=25e4, semiMajorAxis=40e4, material=cesiumpy.color.BLUE)\n",
+    "ellipse = cesiumpy.Ellipse( position=[-100, 40, 0], semi_minor_axis=25e4, semi_major_axis=40e4, material=cesiumpy.color.BLUE)\n",
     "v.entities.add(ellipse)\n",
     "\n",
-    "cylinder = cesiumpy.Cylinder(position=[-90, 40, 50e4], length=100e4, topRadius=10e4, bottomRadius=10e4, material=cesiumpy.color.AQUA)\n",
+    "cylinder = cesiumpy.Cylinder(position=[-90, 40, 50e4], length=100e4, top_radius=10e4, bottom_radius=10e4, material=cesiumpy.color.AQUA)\n",
     "v.entities.add(cylinder)\n",
     "\n",
     "polygon = cesiumpy.Polygon(hierarchy=[-80, 40, -85, 40, -82.5, 45], material=cesiumpy.color.ORANGE)\n",
@@ -110,7 +110,7 @@
     "ellipsoid = cesiumpy.Ellipsoid(position=(-60, 40, 0), radii=(20e4, 20e4, 30e4), material=cesiumpy.color.GREEN)\n",
     "v.entities.add(ellipsoid)\n",
     "\n",
-    "wall = cesiumpy.Wall(positions=[-50, 35, -55, 35, -55, 40, -50, 40, -50, 35], maximumHeights=10e4, minimumHeights=0,\n",
+    "wall = cesiumpy.Wall(positions=[-50, 35, -55, 35, -55, 40, -50, 40, -50, 35], maximum_heights=10e4, minimum_heights=0,\n",
     "                     material=cesiumpy.color.RED)\n",
     "v.entities.add(wall)\n",
     "\n",
