feat: snake casify

--- a/examples/05_datasources.ipynb
+++ b/examples/05_datasources.ipynb
@@ -41,7 +41,7 @@
     }
    ],
    "source": [
-    "ds = cesiumpy.GeoJsonDataSource(os.path.join('data', 'example.geojson'), markerSymbol='!')\n",
+    "ds = cesiumpy.GeoJsonDataSource(os.path.join('data', 'example.geojson'), marker_symbol='!')\n",
     "v = cesiumpy.Viewer()\n",
     "v.dataSources.add(ds)\n",
     "v.camera.flyTo((-118.27, 34.05, 10000))\n",
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "cesiumpy.GeoJsonDataSource.load(os.path.join('data', 'example.geojson'), markerSymbol='!').script"
+    "cesiumpy.GeoJsonDataSource.load(os.path.join('data', 'example.geojson'), marker_symbol='!').script"
    ]
   },
   {
